created notebook and imports

--- a/jarred_ml.ipynb
+++ b/jarred_ml.ipynb
@@ -35,6 +35,14 @@
     "import scipy\n",
     "import scikit-learn"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01e0a873",
+   "metadata": {},
+   "source": [
+    "## Part 1 - Chart a Straight Line"
+   ]
   }
  ],
  "metadata": {
