--- a/jarred_ml.ipynb
+++ b/jarred_ml.ipynb
@@ -470,10 +470,112 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d844079c",
+   "metadata": {},
+   "source": [
+    "### Data Acquisition\n",
+    "Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3006d1df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0ac6240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(nyc.Date.values.reshape(-1, 1), nyc.Temperature.values, random_state=11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9cea847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "79acdc63",
    "metadata": {},
    "source": [
-    "### Data Acquisition"
+    "linear_regression = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "377720a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_regression.fit(X=X_train, y=y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0a0ddec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_regression.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536620fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_regression.intercept_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5755e2a",
+   "metadata": {},
+   "source": [
+    "### Section 2 - Test Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4007c32a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Testing the Model\n",
+    "predicted = linear_regression.predict(X_test)\n",
+    "\n",
+    "expected = y_test\n",
+    "\n",
+    "for p, e in zip(predicted[::5], expected[::5]):\n",
+    "     print(f'predicted: {p:.2f}, expected: {e:.2f}')"
    ]
   },
   {
@@ -525,11 +627,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1e336ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict = (lambda x: linear_regression.coef_ * x + \n",
+    "                      linear_regression.intercept_)\n",
+    "\n",
+    "predict(2024)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5ad0332d",
    "metadata": {},
    "source": [
     "### Section 3 - Visualizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae3f3d4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualizing the Dataset with the Regression Line\n",
+    "# import seaborn as sns\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "axes = sns.scatterplot(data=df, x='Date', y='Temperature',\n",
+    "     hue='Temperature', palette='winter', legend=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a1b4fd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualizing the Dataset with the Regression Line\n",
+    "# import seaborn as sns\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "axes = sns.scatterplot(data=df, x='Date', y='Temperature',\n",
+    "     hue='Temperature', palette='winter', legend=False)\n",
+    "\n",
+    "axes.set_ylim(10, 70)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18389220",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualizing the Dataset with the Regression Line\n",
+    "# import numpy as np\n",
+    "\n",
+    "x = np.array([min(df.Date.values), max(df.Date.values)])\n",
+    "\n",
+    "y = predict(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3f54ad6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualizing the Dataset with the Regression Line\n",
+    "# import matplotlib.pyplot as plt \n",
+    "plt.figure(figsize=(12, 6))\n",
+    "line = plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b9dc184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualizing the Dataset with the Regression Line\n",
+    "# import seaborn as sns\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "axes = sns.scatterplot(data=df, x='Date', y='Temperature',\n",
+    "     hue='Temperature', palette='winter', legend=False)\n",
+    "\n",
+    "axes.set_ylim(10, 70)\n",
+    "\n",
+    "x = np.array([min(df.Date.values), max(df.Date.values)])\n",
+    "\n",
+    "y = predict(x)\n",
+    "\n",
+    "line = plt.plot(x, y)"
    ]
   },
   {
@@ -539,6 +737,16 @@
    "source": [
     "## Part 4\n",
     "Comparing the two methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a9f330a",
+   "metadata": {},
+   "source": [
+    "**SciPy** fits a regression line on all data at once, while **scikit-learn** splits data into trianing sets for evaluation. SciPy would be better for quick analysis while scikit-learn is best for predictive modeling and more indepth analysis.\n",
+    "\n",
+    "**SciPy** is best for small datasets and when we prioritize simplicity. **scikit-learn** is best when evealuating model generalization, planning on scaling up complex models, or when compatibility with other ML workflows is needed."
    ]
   }
  ],
